test/cases/compile_errors/const_is_a_statement_not_an_expression.zig
export fn f() void {
    (const a = 0);
}

// error
//
// :2:6: error: expected expression, found 'const'
